feature: Add layer 'SWL_TANK_PS(정화조), SWT_REPAIR_WORK_ST(보수공사)'

--- a/tools/webpack/webgis/views/partials/_aside-swl.html
+++ b/tools/webpack/webgis/views/partials/_aside-swl.html
@@ -25,8 +25,7 @@
             <span class="menu-text">{{company_ko}} {{role_ko}} 웹조회시스템</span>
           </a>
         </li>
-        <li class="menu-section">
-        </li>
+        <li class="menu-section" style="margin: 0;"></li>
         <li class="menu-item menu-item-submenu menu-item-swl" aria-haspopup="true" data-menu-toggle="hover">
           <a href="javascript:;" class="menu-link menu-toggle">
 										<span class="svg-icon menu-icon"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo5\dist/../src/media/svg/icons\Files\Group-folders.svg--><svg
@@ -226,23 +225,11 @@
                   </i>
                   <span class="menu-text ml-2">측구</span>
                   <span class="menu-label">
-                                  <i class="ol-table-code ol-table-code-swl" id="viw_swl_side_ls"></i>
-                                </span>
+                    <i class="ol-table-code ol-table-code-swl" id="viw_swl_side_ls"></i>
+                  </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <!--              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                              <a href="javascript:;" class="menu-link menu-toggle">
-                                <i class="menu-bullet">
-                                  <img src="assets/media/symbols/SA006.png">
-                                </i>
-                                <span class="menu-text ml-2">물방향</span>
-                                <span class="menu-label">
-                                  <i class="ol-table-code ol-table-code-swl" id="viw_swl_pipe_dir_ps"></i>
-                                </span>
-                                <i class="menu-arrow" style="color: transparent;"></i>
-                              </a>
-                            </li>-->
             </ul>
           </div>
         </li>
@@ -336,7 +323,7 @@
                   </i>
                   <span class="menu-text ml-2">물받이</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-swl" id="viw_swl_manh_ps"></i>
+                    <i class="ol-table-code ol-table-code-swl" id="viw_swl_spot_ps"></i>
                   </span>
                   <i class="menu-arrow"></i>
                 </a>
@@ -447,12 +434,57 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
+              <li class="menu-item menu-item-submenu" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <i class="ki ki-dots icon-lg" style="color: #489EE2;"></i>
+                  </i>
+                  <span class="menu-text ml-2">정화시설</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-swl" id="viw_swl_tank_ps"></i>
+                  </span>
+                  <i class="menu-arrow"></i>
+                </a>
+                <div class="menu-submenu">
+                  <i class="menu-arrow"></i>
+                  <ul class="menu-subnav">
+                    <li class="menu-item" aria-haspopup="true">
+                      <a href="javascript:;" class="menu-link">
+                        <i class="menu-bullet">
+                          <img src="assets/media/symbols/SB950.png">
+                        </i>
+                        <span class="menu-text ml-2">정화조</span>
+                      </a>
+                    </li>
+                    <li class="menu-item" aria-haspopup="true">
+                      <a href="javascript:;" class="menu-link">
+                        <i class="menu-bullet">
+                          <img src="assets/media/symbols/SB951.png">
+                        </i>
+                        <span class="menu-text ml-2">오수처리시설</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <img src="assets/media/symbols/RE003.png">
+                  </i>
+                  <span class="menu-text ml-2">보수공사</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-swl" id="viw_wtt_wutl_ht"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <i class="ki ki-minus icon-lg" style="color: transparent;"></i>
                   </i>
-                  <span class="menu-text">사용자주기</span>
+                  <span class="menu-text ml-2">사용자주기</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-swl" id="viw_wtl_userlabel_ps"></i>
                   </span>
