fix: Browser compatibility issues

--- a/tools/webpack/webgis/views/partials/_header-mobile.html
+++ b/tools/webpack/webgis/views/partials/_header-mobile.html
@@ -35,6 +35,7 @@
                             <a class="label label-lg label-info label-inline font-weight-bolder mr-1"
                                data-container="body"
                                data-placement="bottom" data-theme="dark" data-toggle="tooltip" href="javascript:;"
+                               aria-label="시설물•주소를 검색합니다"
                                title="시설물•주소를 검색합니다">
                             </a>
 												</span>
