--- a/tools/webpack/webgis/views/partials/_header-service-register.html
+++ b/tools/webpack/webgis/views/partials/_header-service-register.html
@@ -8,7 +8,7 @@
     <div class="d-none d-lg-flex align-items-center mr-3">
 
       <!--begin::Aside Toggle-->
-      <button class="btn btn-icon aside-toggle ml-n3 mr-10" id="kt_aside_desktop_toggle">
+      <button class="btn btn-icon aside-toggle ml-n3 mr-10" id="kt_aside_desktop_toggle" title="kt_aside_desktop_toggle">
         <span class="svg-icon svg-icon-white svg-icon-2x"><!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo7\dist/../src/media/svg/icons\Text\Menu.svg--><svg
             xmlns="http://www.w3.org/2000/svg"
             width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
@@ -42,6 +42,7 @@
                             <a href="javascript:;"
                                class="label label-lg label-info label-inline font-weight-bolder mr-1"
                                data-container="body" data-toggle="tooltip" data-placement="bottom" data-theme="dark"
+                               aria-label="시설물•주소를 검색합니다"
                                title="시설물•주소를 검색합니다">
                             </a>
 												</span>
