--- a/tools/webpack/webgis/views/partials/_modal/_ol-search.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-search.html
@@ -40,8 +40,8 @@
                     </div>
                   </div>
                   <div id="collapseTwo5" class="collapse" data-parent="#accordionExample5">
-                    <div class="card-body">
-                      <ul class="navi navi-hover navi-active navi-accent" id="viw_wtl_pipe_lm_filter_ist_ymd">
+                    <div class="card-body" id="viw_wtl_pipe_lm_filter_ist_ymd">
+                      <ul class="navi navi-hover navi-active navi-accent">
                         <li class="navi-item">
                           <a href="javascript:;" class="navi-link">
                             <span class="navi-text text-danger font-weight-bolder" title="-1">&nbsp;초기화</span>
@@ -67,26 +67,26 @@
                             <span class="navi-text" title="20">&nbsp;20 년 이상</span>
                           </a>
                         </li>
-                        <form class="form m-2 pl-5 pr-5">
-                          <label class="text-primary font-weight-bolder">직접 지정...</label>
-                          <div class="form-group form-group-sm row mb-2">
-                            <div class="col-6 pl-0 pr-1">
-                              <input class="form-control form-control-sm kt_inputmask_range" name="begin"
-                                     placeholder="시작 연도"
-                                     type="text">
-                            </div>
-                            <div class="col-6 pl-1 pr-0">
-                              <input class="form-control form-control-sm kt_inputmask_range" name="end" placeholder="끝 연도"
-                                     type="text">
-                            </div>
-                          </div>
-                          <div class="form-group form-group-sm row mb-0">
-                            <button type="button" class="btn btn-sm btn-block btn-light-primary font-weight-bolder p-2">
-                              적용
-                            </button>
-                          </div>
-                        </form>
                       </ul>
+                      <form class="form m-2 pl-5 pr-5">
+                        <label class="text-primary font-weight-bolder">직접 지정...</label>
+                        <div class="form-group form-group-sm row mb-2">
+                          <div class="col-6 pl-0 pr-1">
+                            <input class="form-control form-control-sm kt_inputmask_range" name="begin"
+                                   placeholder="시작 연도"
+                                   type="text">
+                          </div>
+                          <div class="col-6 pl-1 pr-0">
+                            <input class="form-control form-control-sm kt_inputmask_range" name="end" placeholder="끝 연도"
+                                   type="text">
+                          </div>
+                        </div>
+                        <div class="form-group form-group-sm row mb-0">
+                          <button type="button" class="btn btn-sm btn-block btn-light-primary font-weight-bolder p-2">
+                            적용
+                          </button>
+                        </div>
+                      </form>
                     </div>
                   </div>
                 </div>
@@ -97,8 +97,8 @@
                     </div>
                   </div>
                   <div id="collapseThree5" class="collapse" data-parent="#accordionExample5">
-                    <div class="card-body">
-                      <ul class="navi navi-hover navi-active navi-accent" id="viw_wtl_pipe_lm_filter_pip_dip">
+                    <div class="card-body" id="viw_wtl_pipe_lm_filter_pip_dip">
+                      <ul class="navi navi-hover navi-active navi-accent">
                         <li class="navi-item">
                           <a href="javascript:;" class="navi-link">
                             <span class="navi-text text-danger font-weight-bolder" title="-1">&nbsp;초기화</span>
@@ -124,26 +124,26 @@
                             <span class="navi-text" title="200">&nbsp;200 mm 이상</span>
                           </a>
                         </li>
-                        <form class="form m-2 pl-5 pr-5">
-                          <label class="text-primary font-weight-bolder">직접 지정...</label>
-                          <div class="form-group form-group-sm row mb-2">
-                            <div class="col-6 pl-0 pr-1">
-                              <input class="form-control form-control-sm kt_inputmask_range" name="begin"
-                                     placeholder="최소 구경"
-                                     type="text">
-                            </div>
-                            <div class="col-6 pl-1 pr-0">
-                              <input class="form-control form-control-sm kt_inputmask_range" name="end" placeholder="최대 구경"
-                                     type="text">
-                            </div>
-                          </div>
-                          <div class="form-group form-group-sm row mb-0">
-                            <button type="button" class="btn btn-sm btn-block btn-light-primary font-weight-bolder p-2">
-                              적용
-                            </button>
-                          </div>
-                        </form>
                       </ul>
+                      <form class="form m-2 pl-5 pr-5">
+                        <label class="text-primary font-weight-bolder">직접 지정...</label>
+                        <div class="form-group form-group-sm row mb-2">
+                          <div class="col-6 pl-0 pr-1">
+                            <input class="form-control form-control-sm kt_inputmask_range" name="begin"
+                                   placeholder="최소 구경"
+                                   type="text">
+                          </div>
+                          <div class="col-6 pl-1 pr-0">
+                            <input class="form-control form-control-sm kt_inputmask_range" name="end" placeholder="최대 구경"
+                                   type="text">
+                          </div>
+                        </div>
+                        <div class="form-group form-group-sm row mb-0">
+                          <button type="button" class="btn btn-sm btn-block btn-light-primary font-weight-bolder p-2">
+                            적용
+                          </button>
+                        </div>
+                      </form>
                     </div>
                   </div>
                 </div>
