--- a/tools/webpack/webgis/views/layouts/main.html
+++ b/tools/webpack/webgis/views/layouts/main.html
@@ -20,7 +20,7 @@ License: You must have a valid license purchased only from themeforest(the above
   <meta charset="utf-8"/>
   <title>{{title}}</title>
   <meta name="description" content=""/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="csrf-token" content="{{_csrfToken}}"/>
 
   <!--begin::Fonts-->
