--- a/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-photo.html
@@ -37,6 +37,7 @@
                       data-skin="dark"
                       data-toggle="kt-tooltip"
                       data-original-title="클릭하여 원본 확인"
+                      title="클릭하여 원본 확인"
                       style="background-color:rgba(0,0,0,0.55);color: white"
                   >
                   </button>
