--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -72,7 +72,7 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <!--<li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <i class="fas fa-border-style icon-lg" style="color: #0000a0"></i>
@@ -84,7 +84,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>-->
+              </li>
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -497,7 +497,7 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+         {{!--<li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <img src="assets/media/symbols/SA199_B.png">
@@ -508,7 +508,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>
+              </li>--}}
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -521,7 +521,7 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+           {{!--<li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <!--                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>-->
@@ -533,7 +533,7 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>
+              </li>--}}
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:;" class="menu-link menu-toggle">
                   <i class="menu-bullet">
