--- a/tools/webpack/webgis/views/partials/_header-mobile.html
+++ b/tools/webpack/webgis/views/partials/_header-mobile.html
@@ -140,22 +140,20 @@
         </button>
         <!--end::Toggle-->
       </div>
-      {{!
       <div class="outer ml-4 mr-2">
         <div class="inner"></div>
       </div>
       <div class="topbar-item">
         <!--begin::Toggle-->
-        <button aria-expanded="false"
-                aria-haspopup="false"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-xl"
-                data-offset="0,10"
-                type="button">
+        <button type="button"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                aria-haspopup="false" aria-expanded="false" id="btn-search"
+                data-offset="0,10">
           시설 관리
         </button>
         <!--end::Toggle-->
       </div>
-      <div class="outer ml-4 mr-2">
+ {{!--<div class="outer ml-4 mr-2">
         <div class="inner"></div>
       </div>
       <div class="topbar-item">
@@ -206,7 +204,7 @@
         </div>
         <!--end::Dropdown-->
       </div>
-      }}
+    --}}
     </div>
     <!--end::Topbar-->
   </div>
