feature: Add layer 'CITY_PLANNING_ROAD(도시계획선)' to WFIS47280A

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -111,6 +111,19 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
+              <!--<li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:;" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
+                    <i class="fas fa-border-style icon-lg" style="color: #ff00ff"></i>
+                  </i>
+                  <span class="menu-text ml-2">도시계획선</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-wtl"
+                       id="city_planning_road"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>-->
             </ul>
           </div>
         </li>
