--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -118,7 +118,7 @@
                   </i>
                   <span class="menu-text ml-2">도시계획선</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl"
+                    <i class="ol-table-code ol-table-code-wtl fas fa-times-circle text-danger icon-lg"
                        id="city_planning_road"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
