fix: Remove 'SPI' layer control from default

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -639,7 +639,7 @@
             </ul>
           </div>
         </li>
-        <li class="menu-section" style="margin: 0;"></li>
+        <!--<li class="menu-section" style="margin: 0;"></li>
         <li class="menu-item menu-item-submenu menu-item-wtl" aria-haspopup="true" data-menu-toggle="hover">
           <a href="javascript:;" class="menu-link menu-toggle">
             <i class="menu-bullet">
@@ -752,7 +752,7 @@
               </li>
             </ul>
           </div>
-        </li>
+        </li>-->
       </ul>
 
       <!--end::Menu Nav-->
