feature: Add new overlay for hover popup

--- a/tools/webpack/webgis/views/partials/_content.html
+++ b/tools/webpack/webgis/views/partials/_content.html
@@ -35,6 +35,7 @@
       "
     ></div>
     <div id="popup"></div>
+    <div id="popup_hover"></div>
   </div>
   <div id="rvWrapper" class="child">
     <div id="map-roadview" style="height: 100%;"></div>
