chore: Update ol

--- a/tools/webpack/webgis/views/layouts/main.html
+++ b/tools/webpack/webgis/views/layouts/main.html
@@ -32,7 +32,7 @@ License: You must have a valid license purchased only from themeforest(the above
   <link href="assets/css/pages/login/classic/login-4.css" rel="stylesheet" type="text/css" />
   <link href="assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
   <!--end::Page Vendors Styles-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/css/ol.css" type="text/css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@7.4.0/ol.min.css">
   <!--begin::Global Theme Styles(used by all pages)-->
   <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
   <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
