--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -219,7 +219,7 @@
 
         <!--end::Toggle-->
       </div>
-{{!--
+
       <div class="outer ml-4 mr-2">
         <div class="inner"></div>
       </div>
@@ -304,7 +304,7 @@
 
       <!--begin::Notifications-->
 
-      <!--end::Notifications-->--}}
+      <!--end::Notifications-->
     </div>
 
     <!--end::Topbar-->
