--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -54,7 +54,7 @@
                   </i>
                   <span class="menu-text ml-2">건물 및 도로</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-geo fas fa-lock text-primary icon-lg" id="n3a_a0010000"></i>
+                    <i class="ol-table-code ol-table-code-geo fas fa-lock text-primary" id="n3a_a0010000"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
@@ -66,7 +66,7 @@
                   </i>
                   <span class="menu-text ml-2">표고점</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-geo fas fa-times-circle text-danger icon-lg"
+                    <i class="ol-table-code ol-table-code-geo fas fa-minus-square text-danger"
                        id="n3p_f0020000"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -79,7 +79,7 @@
                   </i>
                   <span class="menu-text ml-2">지적선 및 지번</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-geo fas fa-times-circle text-danger icon-lg"
+                    <i class="ol-table-code ol-table-code-geo fas fa-minus-square text-danger"
                        id="geo_line_as"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -92,7 +92,7 @@
                   </i>
                   <span class="menu-text ml-2">법정동 경계</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl fas fa-times-circle text-danger icon-lg"
+                    <i class="ol-table-code ol-table-code-wtl fas fa-minus-square text-danger"
                        id="viw_bml_badm_as"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -105,7 +105,7 @@
                   </i>
                   <span class="menu-text ml-2">행정동 경계</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl fas fa-times-circle text-danger icon-lg"
+                    <i class="ol-table-code ol-table-code-wtl fas fa-minus-square text-danger"
                        id="viw_bml_hadm_as"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -118,7 +118,7 @@
                   </i>
                   <span class="menu-text ml-2">도시계획선</span>
                   <span class="menu-label">
-                    <i class="ol-table-code ol-table-code-wtl fas fa-times-circle text-danger icon-lg"
+                    <i class="ol-table-code ol-table-code-wtl fas fa-minus-square text-danger"
                        id="city_planning_road"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -163,6 +163,14 @@
                     <i class="ki ki-dots icon-lg" style="color: #489EE2;"></i>
                   </i>
                   <span class="menu-text ml-2">상수관로</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_pipe_lm" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_pipe_lm" title="내보내기"></i>
+                  </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pipe_lm"></i>
                   </span>
@@ -259,6 +267,14 @@
                   </i>
                   <span class="menu-text ml-2">가정급수관</span>
                   <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_sply_ls" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_sply_ls" title="내보내기"></i>
+                  </span>
+                  <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_sply_ls"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -338,6 +354,14 @@
                   </i>
                   <span class="menu-text ml-2">정수장</span>
                   <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_puri_as" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_puri_as" title="내보내기"></i>
+                  </span>
+                  <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_puri_as"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -350,6 +374,14 @@
                     <img alt="" src="assets/media/symbols/SA114.png">
                   </i>
                   <span class="menu-text ml-2">배수지</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_serv_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_serv_ps" title="내보내기"></i>
+                  </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_serv_ps"></i>
                   </span>
@@ -364,6 +396,14 @@
                   </i>
                   <span class="menu-text ml-2">가압장</span>
                   <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_pres_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_pres_ps" title="내보내기"></i>
+                  </span>
+                  <span class="menu-label">
                       <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pres_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -376,6 +416,14 @@
                     <img alt="" src="assets/media/symbols/SA122.png">
                   </i>
                   <span class="menu-text ml-2">급수전</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_meta_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_meta_ps" title="내보내기"></i>
+                  </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_meta_ps"></i>
                   </span>
@@ -390,6 +438,14 @@
                   </i>
                   <span class="menu-text ml-2">스케일부스터</span>
                   <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_scvst_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_scvst_ps" title="내보내기"></i>
+                  </span>
+                  <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_scvst_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -403,6 +459,14 @@
                   </i>
                   <span class="menu-text ml-2">상수맨홀</span>
                   <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_manh_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_manh_ps" title="내보내기"></i>
+                  </span>
+                  <span class="menu-label">
                                   <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_manh_ps"></i>
                                 </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -414,6 +478,14 @@
                     <i class="ki ki-dots icon-lg" style="color: #489EE2;"></i>
                   </i>
                   <span class="menu-text ml-2">유량시설</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_flow_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_flow_ps" title="내보내기"></i>
+                  </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_flow_ps"></i>
                   </span>
@@ -447,6 +519,14 @@
                     <i class="ki ki-dots icon-lg" style="color: #489EE2;"></i>
                   </i>
                   <span class="menu-text ml-2">변류시설</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_valv_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_valv_ps" title="내보내기"></i>
+                  </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_valv_ps"></i>
                   </span>
@@ -510,8 +590,9 @@
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-         {{!--<li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                <a href="javascript:;" class="menu-link menu-toggle">
+              {{!--
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <img alt="" src="assets/media/symbols/SA199_B.png">
                   </i>
@@ -521,7 +602,8 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>--}}
+              </li>
+              --}}
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:" class="menu-link menu-toggle">
                   <i class="menu-bullet">
@@ -529,13 +611,22 @@
                   </i>
                   <span class="menu-text ml-2">소방시설</span>
                   <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_fire_ps" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_fire_ps" title="내보내기"></i>
+                  </span>
+                  <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_fire_ps"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
               </li>
-           {{!--<li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
-                <a href="javascript:;" class="menu-link menu-toggle">
+              {{!--
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <!--                    <i class="ki ki-minus icon-lg" style="color: transparent;"></i>-->
                     <img alt="" src="assets/media/symbols/EP003_2.png">
@@ -546,13 +637,22 @@
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
                 </a>
-              </li>--}}
+              </li>
+              --}}
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:" class="menu-link menu-toggle">
                   <i class="menu-bullet">
                     <img alt="" src="assets/media/symbols/RE003.png">
                   </i>
                   <span class="menu-text ml-2">보수공사</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtt_wutl_ht" title="통계보기"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning text- icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtt_wutl_ht" title="내보내기"></i>
+                  </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtt_wutl_ht"></i>
                   </span>
