--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -54,6 +54,10 @@
                   </i>
                   <span class="menu-text ml-2">건물 및 도로</span>
                   <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:buld_mah,{{workspace}}:road" title="내보내기" data-target="건물및도로"></i>
+                  </span>
+                  <span class="menu-label">
                     <i class="ol-table-code ol-table-code-geo fas fa-lock text-primary" id="n3a_a0010000"></i>
                   </span>
                   <i class="menu-arrow" style="color: transparent;"></i>
@@ -165,11 +169,11 @@
                   <span class="menu-text ml-2">상수관로</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_pipe_lm" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_pipe_lm" title="통계보기" data-target="상수관로"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_pipe_lm" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_pipe_lm" title="내보내기" data-target="상수관로"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pipe_lm"></i>
@@ -268,11 +272,11 @@
                   <span class="menu-text ml-2">가정급수관</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_sply_ls" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_sply_ls" title="통계보기" data-target="가정급수관"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_sply_ls" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_sply_ls" title="내보내기" data-target="가정급수관"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_sply_ls"></i>
@@ -355,11 +359,11 @@
                   <span class="menu-text ml-2">정수장</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_puri_as" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_puri_as" title="통계보기" data-target="정수장"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_puri_as" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_puri_as" title="내보내기" data-target="정수장"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_puri_as"></i>
@@ -376,11 +380,11 @@
                   <span class="menu-text ml-2">배수지</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_serv_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_serv_ps" title="통계보기" data-target="배수지"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_serv_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_serv_ps" title="내보내기" data-target="배수지"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_serv_ps"></i>
@@ -397,11 +401,11 @@
                   <span class="menu-text ml-2">가압장</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_pres_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_pres_ps" title="통계보기" data-target="가압장"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_pres_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_pres_ps" title="내보내기" data-target="가압장"></i>
                   </span>
                   <span class="menu-label">
                       <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_pres_ps"></i>
@@ -418,11 +422,11 @@
                   <span class="menu-text ml-2">급수전</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_meta_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_meta_ps" title="통계보기" data-target="급수전"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_meta_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_meta_ps" title="내보내기" data-target="급수전"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_meta_ps"></i>
@@ -439,11 +443,11 @@
                   <span class="menu-text ml-2">스케일부스터</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_scvst_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_scvst_ps" title="통계보기" data-target="스케일부스터"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_scvst_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_scvst_ps" title="내보내기" data-target="스케일부스터"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_scvst_ps"></i>
@@ -460,11 +464,11 @@
                   <span class="menu-text ml-2">상수맨홀</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_manh_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_manh_ps" title="통계보기" data-target="상수맨홀"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_manh_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_manh_ps" title="내보내기" data-target="상수맨홀"></i>
                   </span>
                   <span class="menu-label">
                                   <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_manh_ps"></i>
@@ -480,11 +484,11 @@
                   <span class="menu-text ml-2">유량시설</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_flow_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_flow_ps" title="통계보기" data-target="유량시설"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_flow_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_flow_ps" title="내보내기" data-target="유량시설"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_flow_ps"></i>
@@ -521,11 +525,11 @@
                   <span class="menu-text ml-2">변류시설</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_valv_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_valv_ps" title="통계보기" data-target="변류시설"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_valv_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_valv_ps" title="내보내기" data-target="변류시설"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_valv_ps"></i>
@@ -612,11 +616,11 @@
                   <span class="menu-text ml-2">소방시설</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_fire_ps" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_fire_ps" title="통계보기" data-target="소방시설"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_fire_ps" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_fire_ps" title="내보내기" data-target="소방시설"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_fire_ps"></i>
@@ -647,11 +651,11 @@
                   <span class="menu-text ml-2">보수공사</span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtt_wutl_ht" title="통계보기"></i>
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtt_wutl_ht" title="통계보기" data-target="보수공사"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-export fas fa-save text-warning text- icon-lg mr-3"
-                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtt_wutl_ht" title="내보내기"></i>
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtt_wutl_ht" title="내보내기" data-target="보수공사"></i>
                   </span>
                   <span class="menu-label">
                     <i class="ol-table-code ol-table-code-wtl" id="viw_wtt_wutl_ht"></i>
