--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -117,6 +117,18 @@
         <!--end::Dropdown-->
       </div>
 
+<!--      <div class="topbar-item">-->
+
+<!--        &lt;!&ndash;begin::Toggle&ndash;&gt;-->
+<!--        <button type="button"-->
+<!--                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"-->
+<!--                id="btn-toggle-modify">-->
+<!--          편집-->
+<!--        </button>-->
+
+<!--        &lt;!&ndash;end::Toggle&ndash;&gt;-->
+<!--      </div>-->
+
       <!--end::Tablet & Mobile Search-->
 
       <!--begin::Create-->
