--- a/tools/webpack/webgis/views/partials/_modal/_ol-info.html
+++ b/tools/webpack/webgis/views/partials/_modal/_ol-info.html
@@ -36,6 +36,16 @@
              data-toggle="tooltip" title="화면 가운데로 이동" data-placement="auto">
             <i class="fas fa-map-marker-alt icon-md"></i>
           </a>
+          <button type="button" data-toggle="tooltip" title="수정 전으로 되돌리기" data-placement="auto"
+                  class="btn btn-outline-secondary btn-hover-primary btn-md font-weight-bolder"
+                  id="btn-back-modify">
+            <-
+          </button>
+          <button type="button" data-toggle="tooltip" title="편집모드" data-placement="auto"
+                  class="btn btn-outline-secondary btn-hover-primary btn-md font-weight-bolder"
+                  id="btn-toggle-modify">
+            off
+          </button>
           <div class="btn-group" role="group">
             <a href="javascript:;" class="btn disabled btn-outline-secondary btn-hover-secondary btn-md font-weight-bolder"
                id="btn_history_modal">
@@ -43,7 +53,7 @@
             </a>
             <a href="javascript:;" class="btn disabled btn-outline-secondary btn-hover-secondary btn-md font-weight-bolder"
                id="btn_photo_modal">
-              <i class="far fa-file-image icon-md"></i> 사진보기
+              <i class="far fa-file-image icon-md"></i> 사진
             </a>
           </div>
           <!--begin::Compose-->
