--- a/demo5/src/sass/_init.scss
+++ b/demo5/src/sass/_init.scss
@@ -14,6 +14,9 @@
 // Bootstrap mixins
 @import "../../../tools/node_modules/bootstrap/scss/mixins";
 
+// Fonts
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&display=swap");
+
 // Global variables
 @import "components/variables.demo";
 @import "components/variables.bootstrap";
