fix: Disable dev mode by default
- fix: header menu item font

--- a/tools/webpack/webgis/views/partials/_header-mobile.html
+++ b/tools/webpack/webgis/views/partials/_header-mobile.html
@@ -146,7 +146,7 @@
       <div class="topbar-item">
         <!--begin::Toggle-->
         <button type="button"
-                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg"
+                class="btn btn-sm font-weight-bolder btn-text-light btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-xl"
                 aria-haspopup="false" aria-expanded="false" id="btn-search"
                 data-offset="0,10">
           시설 관리
