fix: Base scaffolding for "SANGJU_A (WFIS47250A)" (2)

--- a/tools/webpack/webgis/views/partials/_header.html
+++ b/tools/webpack/webgis/views/partials/_header.html
@@ -126,7 +126,8 @@
         <button type="button"
                 class="btn btn-sm font-weight-bolder btn-text-warning btn-hover-bg-light btn-hover-text-primary ml-2 px-2 py-2 font-size-lg menu-dev"
                 data-toggle="dropdown" aria-haspopup="false" aria-expanded="false"
-                data-offset="0,10">
+                data-offset="0,10"
+                style="display: none;">
           개발
         </button>
 
