fix: 'WTL_GAIN_PS', 'WTL_PURI_AS' point style
- Add 'WTL_GAIN_PS' menu
- Add 'WTL_PURI_AS' symbol(SA113)

--- a/tools/webpack/webgis/views/partials/_aside.html
+++ b/tools/webpack/webgis/views/partials/_aside.html
@@ -646,6 +646,26 @@
               <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
                 <a href="javascript:" class="menu-link menu-toggle">
                   <i class="menu-bullet">
+                    <img alt="" src="assets/media/symbols/SA206.png">
+                  </i>
+                  <span class="menu-text ml-2">취수장</span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-stats fas fa-poll text-success icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="stats:viw_wtl_gain_ps" title="통계보기" data-target="취수장"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-export-wfs fas fa-save text-warning text- icon-lg mr-3"
+                       data-placement="top" data-toggle="tooltip" id="{{workspace}}:viw_wtl_gain_ps" title="내보내기" data-target="취수장"></i>
+                  </span>
+                  <span class="menu-label">
+                    <i class="ol-table-code ol-table-code-wtl" id="viw_wtl_gain_ps"></i>
+                  </span>
+                  <i class="menu-arrow" style="color: transparent;"></i>
+                </a>
+              </li>
+              <li class="menu-item" aria-haspopup="true" data-menu-toggle="hover">
+                <a href="javascript:" class="menu-link menu-toggle">
+                  <i class="menu-bullet">
                     <img alt="" src="assets/media/symbols/RE003.png">
                   </i>
                   <span class="menu-text ml-2">보수공사</span>
